[package]
name = "db-midpj"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity"]

[workspace.dependencies]
# 跨 Package 的依赖。各个 Package 只需要在 Cargo.toml 中声明依赖 { workspace = true } 即可。
sea-orm = { version = "^0.11", features = [
    "sqlx-mysql",
    "runtime-actix-native-tls",
    "macros",
] }
serde = { version = "^1.0", features = ["derive"] }
utoipa = { version = "^3", features = ["actix_extras", "chrono"] }

[dependencies]
entity = { path = "entity" }
actix-web = "^4"
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "^3", features = ["actix-web"] }
sea-orm = { workspace = true }
serde = { workspace = true }
