[package]
name = "db-midpj"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "entity", "migration"]

[profile.release]
# 启用完全 LTO 优化，提高性能，但是编译时间会变长
lto = true
# 要求编译器不要将代码分割成多个单元，也可以提高性能，但是编译时间会变长
codegen-units = 1

[workspace.dependencies]
# 跨 Package 的依赖。各个 Package 只需要在 Cargo.toml 中声明依赖 { workspace = true } 即可。

# ORM 框架
sea-orm = { version = "^0.11", features = [
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
] }
sea-orm-migration = "^0.11"
# 序列化/反序列化
serde = { version = "^1.0", features = ["derive"] }
serde_repr = "^0.1"
serde_with = "^3"
serde_json = "^1"
# OpenAPI 生成
utoipa = { version = "^3", features = ["actix_extras", "chrono"] }
# 日志输出
env_logger = "^0.10"
log = "^0.4"
# 随机字符串
rand = "^0.8"
# 时间
chrono = "^0.4"
# 懒初始化
once_cell = "^1.8"
# 异步 Trait
async-trait = "^0.1"
# Redis 客户端
redis = { version = "^0.23", features = ["tokio-comp"] }
redis-macros = "^0.1"
# Tokio 支持
tokio = "^1"

[dependencies]
# 子 Packages
entity = { path = "entity" }
migration = { path = "migration" }
# 服务器框架
actix-web = "^4"
# CORS 扩展
actix-cors = "^0.6"
# 安全的 Pin 投影实现
pin-project = "^1"
# JWT 解析
jsonwebtoken = "^8"
# 支持两者的类型
either = "^1"
# 读取 .env 文件
dotenv = "^0.15"
# Argon2 密码哈希
argon2 = "^0.5"
# Swagger 托管
utoipa-swagger-ui = { version = "^3", features = ["actix-web"] }
# 宏计数
count-macro = "^0.2"
# 性能更高的内存分配器
mimalloc = { version = "^0.1", default-features = false }

utoipa = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true }
redis-macros = { workspace = true }
tokio = { workspace = true }