[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fromsuper = "^0.1"
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
redis-macros = { workspace = true }
